# DesktopMascot

./: .gitignore  LICENSE  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/: copilot-instructions.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/assets/personas/default/: manifest.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/mascot/: MascotMessageView.tsx  MascotView.tsx  PersonaLoader.ts  PersonaManifest.ts  PngMascotRenderer.tsx  SpeechBubble.tsx  mascot.css
docs/: architecture.md  domain-model.md  setup-windows.md
