[package]
name = "desktop-mascot"
version = "0.0.0"
description = "Desktop Mascot powered by Local LLM and MCP"
authors = []
edition = "2021"

[lib]
name = "desktop_mascot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
